--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
 body {
-  position: relative;
-  width: 100%;
-  height: 100%; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: yellow;
-
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .content {
   position: absolute;
+  width: 100%;
+  height: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+
   background-color: red;
 }
 
@@ -23,13 +20,14 @@ header {
   display: flex;
   justify-content: center;  
   align-items: center;
-
-  font-weight: 600;
   width: 100%;
-  background-color: green;
-  color: white;
-  text-align: center;
   height: 50px;
+
+  text-align: center;
+  font-weight: 600;
+  color: white;
+
+  background-color: green;
 }
 
 .iframe-container {
@@ -41,6 +39,7 @@ header {
 .iframe {
   width: 100%;
   height: 100%;
+
   border: none;
 }
 
@@ -48,33 +47,34 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
 
   width: 100%;
-  background-color: blue;
-  color: white;
-  text-align: center;
   height: 50px;
-
-  gap: 1rem
+  text-align: center;
+  color: white;
+  background-color: blue;
 }
 
 button {
+  cursor: pointer;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  
-  background-color: grey;
-  color: white;
+
+  padding: 4px 15px 6px 15px;
   text-align: center;
+  color: white;
+
   border: 2px solid white;
   border-radius: 4px;
-  padding: 4px 15px 6px 15px;
+  background-color: grey;
 
   transition: all 0.3s;
-  cursor: pointer;
 }
 
 button:hover {
-  background-color: blue;
   color: white;
+  background-color: blue;
 }
